--- a/app/src/main/res/layout/activity_input.xml
+++ b/app/src/main/res/layout/activity_input.xml
@@ -96,7 +96,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/basketball"
-            android:text="@string/app_name"
+            android:text="ENTER BLUE TEAM"
             android:textColor="@android:color/holo_blue_dark"
             android:textSize="40sp"
             android:textStyle="bold"
@@ -140,7 +140,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/basketball"
-            android:text="@string/app_name"
+            android:text="ENTER RED TEAM"
             android:textColor="@android:color/holo_red_dark"
             android:textSize="40sp"
             android:textStyle="bold"
